--- a/web/static/scss/variables/_palette.scss
+++ b/web/static/scss/variables/_palette.scss
@@ -8,9 +8,9 @@ $primary: (
 ) !default;
 
 $secondary: (
-  color: $material-color-amber-600,
-  dark:  $material-color-amber-700,
-  light: $material-color-amber-500
+  color: $material-color-amber-900,
+  dark:  $material-color-amber-900,
+  light: $material-color-amber-700
 ) !default;
 
 $danger: (
